# LibTorch_RefineDet

./: CMakeLists.txt  OK.txt  README.md  do.sh  nms.hpp  post_process.cpp  post_process.hpp  prior.csv  refine_det.cpp  resnet_class.cpp  test.txt
utils/: .nms.cpp.swp  CMakeLists.txt  make.sh  nms.cpp  nms.hpp  nms_kernel.cu
